force-app/main/default/objects/Account/fields/SampleText__c.field-meta.xml
<CustomField>
    <fullName>SampleText__c</fullName>
    <description>A plain text field</description>
    <label>Sample Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>