force-app/main/default/objects/Account/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <description>Source field for a parent-to-child copy operation</description>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>